--- a/blueprints/templates/base_admin.html
+++ b/blueprints/templates/base_admin.html
@@ -10,7 +10,7 @@
     </style>
     <title>Привет мир!</title>
   </head>
-  <body class="h-100 bg-secondary">
+  <body class="h-100 " style = " background: linear-gradient(to right, #30d5c8, #0000E6);">
 <div class='cover-container w-100 d-flex px-0 flex-column '>
     <header class="mb-5">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-auto">
