--- a/blueprints/templates/add_board.html
+++ b/blueprints/templates/add_board.html
@@ -2,7 +2,7 @@
 {%block main_content%}
 <div class="row d-flex justify-content-center align-items-center h-100" >
     <div class="col-8 col-md-6 col-lg-7  bg-dark " style="border-radius: 1rem;">
-        <h1 class="text-center text-white">Создайте игру</h1>
+        <h1 class="my-4 text-center text-white">Создайте игру</h1>
         <form method="post" class="text-center mx-lg-5 mx-4">
             <div class="mt-4">
                 <div class="form-outline form-white mb-4">
