--- a/blueprints/templates/board_list.html
+++ b/blueprints/templates/board_list.html
@@ -9,7 +9,7 @@
 {%block main_content%}
 <div class="justify-content-center text-center">
   <div class = "row justify-content-center text-white ">
-    <h2 class="mb-5">Ваши игровые поля</h2>
+    <h2 class="mb-5 text-dark">Ваши игровые поля</h2>
       {% for board in boards %}
         <div class="col-12 col-md-6 col-lg-4 text-center mb-3">
           <div class="card bg-dark" style="border-radius: 1rem;">
