--- a/blueprints/templates/base_admin.html
+++ b/blueprints/templates/base_admin.html
@@ -54,7 +54,11 @@
     </main>
 
 </div>
-
+<style>
+    a{
+        text-decoration : none;
+    }
+</style>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
