--- a/blueprints/templates/prizes.html
+++ b/blueprints/templates/prizes.html
@@ -29,6 +29,7 @@
     <div class="row justify-content-center justify-content-md-start justify-content-lg-center
     text-white mt-5">
         {% for prize in prizes%}
+        <button onclick="getMassive()" id="filter" data-massive="{{prizes}}">
         <div class=" col-9 col-md-5 col-lg-3 mx-4 mt-3">
             <div class="galery">
                 <div class="card flex-fill bg-dark align-items-center ">
@@ -46,7 +47,7 @@
                 </div>
             </div>
         </div>
-
+    </button>
         {%endfor%}
         </ul>
     </div>
@@ -70,4 +71,15 @@
         <p class="lead mb-5">У вас пока еще нет выигранных призов</p>
     {%endif%}
 {%endif%}
+<srcript>
+    function getMassive(){
+        var button = getElementById('filter')
+        var massive = button.getAttribute('data-massive')
+        console.log(massive)
+    }
+
+    function filter(mass){
+        
+    }
+</srcript>
 {%endblock%}
